use bottom instead of right
it looks much more intuitive

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -29,9 +29,9 @@
   min-height: 500px;
   position: fixed;
 
-  left: 50%;
+  left: 60%;
   top: 128px;
-  right: 0px;
+  bottom: 5%;
 }
 
 .controlColumn {
